# same

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml
.github/workflows/: release.yml
src/: lib.rs
src/context/: cache.rs  client.rs  error.rs  mod.rs  prelude.rs  repo.rs
src/mapping/: conflict.rs  fingerprint.rs  index.rs  mod.rs  resolve.rs
src/registry/: client.rs  compatibility.rs  mod.rs  prelude.rs
src/registry/schema/: id.rs  mod.rs  reference.rs  version.rs
src/registry/subject/: mod.rs  name.rs
tests/: 00-map.rs  01-references.rs  0100-mapping.rs  0101-mapping-ignore-protobuf.rs  0102-mapping-references.rs  0103-mapping-logical-types.rs  0104-mapping-custom-properties.rs  02-logicaltypes.rs  04-multiple-versions.rs
tests/assets/avro/custom-properties/: with-custom-props.avsc  without-custom-props.avsc
tests/assets/avro/logicaltypes/uuid/: hvac.avsc  v1.avsc  v2.avsc
tests/assets/avro/ref/: customer.avsc  order.avsc  product.avsc
tests/assets/avro/user/: v1.avsc
tests/assets/proto/image/: v1.proto  v2.proto
tests/common/: macros.rs  mod.rs  registries.rs
