[package]
name = "same"
version = "0.3.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = { version = "0.3.2", features = ["json"] }
reqwest-tracing = "0.5.2"
keyring = "3.2.0"

#Runtime framework
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7.9", features = ["compat"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"]}
tracing-futures = "0.2.5"

#CLI
clap          = { version ="4.4", features = ["derive"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = [] }
serde_yaml = "0.9.27"
strum = "0.26.3"
strum_macros = "0.26.4"

# Error handling
thiserror = { version = "1", features = [] }
anyhow = "1"

dirs = "5.0"
tempfile = "3.8.1"
apache-avro = "0.21.0"

# command line
dialoguer = { version = "0.11.0", features = ["password", "fuzzy-select"] }
indicatif = "0.17.7"

rand = "0.8.5"
url = "2.4.1"

multimap = "0.10.0"

[dev-dependencies]
testcontainers = "0.27"
