[package]
name = "same"
version = "0.5.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
reqwest-tracing = "0.7.0"
keyring = "3.6.3"

#Runtime framework
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["compat"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"]}
tracing-futures = "0.2.5"

#CLI
clap          = { version ="4.6.0", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = [] }
serde_yml = "0.0.12"
strum = "0.28.0"
strum_macros = "0.28.0"

# Error handling
thiserror = { version = "2.0.18", features = [] }
anyhow = "1"

dirs = "6.0.0"
tempfile = "3.27.0"
apache-avro = "0.21.0"

# command line
dialoguer = { version = "0.12.0", features = ["password", "fuzzy-select"] }
indicatif = "0.18.4"

rand = "0.10.0"
url = "2.5.8"

multimap = "0.10.1"

[dev-dependencies]
testcontainers = "0.27"
